Add Login and Register endpoints

--- a/ChatAPI/ChatAPI.API/appsettings.json
+++ b/ChatAPI/ChatAPI.API/appsettings.json
@@ -1,9 +1,18 @@
 {
+  "AllowedHosts": "*",
+  "JwtOptions": {
+    "Issuer": "https://localhost:5001",
+    "Audience": "https://localhost:5001",
+    "SecretKey": "FufcMckMeMeiMefycckuuFufyyyycykfckkyFFceaslkgmsknml",
+    "ExpirationDays": "30"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=192.168.2.10;Database=ChatDB;User ID=CloudChat;Password=12345;Integrated Security=False;Trusted_Connection=False; Trust Server Certificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
