--- a/ChatAPI/ChatAPI.Persistence/ChatAPI.Persistence.csproj
+++ b/ChatAPI/ChatAPI.Persistence/ChatAPI.Persistence.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ChatAPI.Application\ChatAPI.Application.csproj" />
     <ProjectReference Include="..\ChatAPI.Domain\ChatAPI.Domain.csproj" />
   </ItemGroup>
 
