--- a/ChatAPI/ChatAPI.API/ChatAPI.API.csproj
+++ b/ChatAPI/ChatAPI.API/ChatAPI.API.csproj
@@ -21,4 +21,10 @@
     <ProjectReference Include="..\ChatAPI.Persistence\ChatAPI.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+	  <None Include="wwwroot\*" >
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+  </ItemGroup>  
+
 </Project>
